--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Fairwaves documentation
 email: ""
 description: > # this means to ignore newlines until "baseurl:"
   Documentation for Fairwaves' architecture, products and services 
-baseurl: "/docs" # the subpath of your site, e.g. /blog/
+baseurl: "/wp/docs" # the subpath of your site, e.g. /blog/
 url: "http://fairwaves.co" # the base hostname & protocol for your site
 twitter_username: fairwaves
 github_username:  fairwaves
